--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.15.0",
+    "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "postcss": "^8.5.4",
     "react": "^19.0.0",
